client/src/pages/dashboard/project-views/board/views/active-board/status/task/Task.module.scss
@use "../../../../../../../../styles/variables" as vars;
@use "../../../../../../../../styles/mixins" as mixins;
@use "sass:map";

.container {
  min-height: 80px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
  padding: 0.5rem;
  border-radius: 10px;
  font-size: 0.8rem;

  @include mixins.themed using ($props) {
    background-color: map.get($props, "draggable-item-bg");
    border: map.get($props, "draggable-item-border");
  }

  .header {
    display: flex;
    flex-direction: column;

    > * {
      margin-bottom: 0.5rem;
    }

    .title {
      font-size: 0.75rem;
      font-weight: bold;
      text-decoration: underline;
      color: vars.$primary-color;
    }

    .assignee {
      font-size: 0.7rem;
    }
  }

  .tags {
    display: flex;
    flex-wrap: wrap;
    gap: 0.3rem;
    margin-bottom: 0.5rem;
  }

  .footer {
    display: flex;
    justify-content: flex-end;

    .icon {
      height: 1rem;
      width: 1rem;
      cursor: pointer;

      &:hover {
        color: vars.$primary-color;
      }

      &:not(:last-child) {
        margin-right: 0.3rem;
      }
    }
  }
}

.ghost {
  opacity: 0.3;
  color: transparent;

  @include mixins.themed using ($props) {
    border: map.get($props, "dragging-ghost-border");
  }

  & > * {
    visibility: hidden;
  }
}

